@@ -132,6 +132,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 12536) User should be able to get MediaWiki version from any page
 * (bug 12622) A JavaScript constant to declare whether api.php is available
 * Add caching to the AJAX search
+* Added APCOND_INGROUPS
 
 
 === Bug fixes in 1.12 ===
